--- a/package.json
+++ b/package.json
@@ -13,8 +13,11 @@
     "node-sass": "^8.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-reveal": "^1.2.2",
     "react-router-dom": "^6.8.1",
     "react-scripts": "5.0.1",
+    "react-tsparticles": "^2.9.3",
+    "tsparticles": "^2.9.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
