--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "node-sass": "^8.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-preloaders": "^3.0.3",
     "react-reveal": "^1.2.2",
     "react-router-dom": "^6.8.1",
     "react-scripts": "5.0.1",
