--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-tsparticles": "^2.9.3",
     "react-typing-effect": "^2.0.5",
     "tsparticles": "^2.9.3",
+    "uuid": "^9.0.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
